fix the collapse triangle of hack indexs

--- a/app/styles/hack.styl
+++ b/app/styles/hack.styl
@@ -103,7 +103,7 @@ body
     &.collapsed
       cursor e-resize
       margin-left 27px - $width
-      .hackid small
+      .hackid i.small
         margin-right 8px
       img
         margin-top 5px
@@ -115,12 +115,12 @@ body
     .hackid
       background-color #ddd
       margin-bottom 10px
-      padding 15px 0 10px $pad
+      padding 15px 15px 10px $pad
       white-space nowrap
       position relative
       i
         margin-top 4px
-      small
+      i.small
         position absolute
         right: 0
         bottom: 14px
